--- a/index.html
+++ b/index.html
@@ -2940,7 +2940,7 @@
                     </div>
                     <div class="project-info">
                         <input class="project-name-input" value="${(proj.name||'').replace(/"/g,'&quot;')}"
-                            onchange="renameProject(${proj.id}, this.value)"
+                            onchange="renameProject('${proj.id}', this.value)"
                             onclick="event.stopPropagation()">
                         <div class="project-meta">
                             <span>Создан: ${formatDate(proj.createdAt)}</span>
@@ -2963,18 +2963,18 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <button class="btn btn-primary" onclick="openProject(${proj.id})">
+                        <button class="btn btn-primary" onclick="openProject('${proj.id}')">
                             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
                             Открыть
                         </button>
-                        <button class="btn btn-secondary" onclick="exportProjectById(${proj.id})" title="Excel">
+                        <button class="btn btn-secondary" onclick="exportProjectById('${proj.id}')" title="Excel">
                             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/></svg>
                             Excel
                         </button>
-                        <button class="btn btn-secondary" onclick="duplicateProject(${proj.id})" title="Дублировать">
+                        <button class="btn btn-secondary" onclick="duplicateProject('${proj.id}')" title="Дублировать">
                             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"/><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/></svg>
                         </button>
-                        <button class="icon-btn delete" onclick="deleteProjectById(${proj.id})" title="Удалить">
+                        <button class="icon-btn delete" onclick="deleteProjectById('${proj.id}')" title="Удалить">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></svg>
                         </button>
                     </div>
